--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,281 @@
+/* BASE HTML ELEMENTS */
+
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  --header-nav-gap: 2.8rem;
+  --outer: 3.6rem;
+  --font-sans: "Open Sans", -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
+  --gap: 3.6rem;
+  font-size: 62.5%;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+[data-theme="light"]:root {
+  --code-block-color: #1b252c;
+  --background-color1: #ffffff;
+  --background-color2: #ffffff;
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+  --shadow-size: 0px;
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+  --object-color: #ffffff;
+  --object-color-2: #ffffff;
+  --object-color-3: #ffffff;
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+  --header-color: #ffffff;
+  --header-text-color: black;
+
+  --text-color: black;
+  --text-color-2: black;
+
+  --accent-color:#3fa39e;
+  --accent-color-2: #3fa365;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
+[data-theme="dark"]:root {
+  --code-block-color: #1b252c;
+  --object-color: #1b252c;
+  --object-color-2: #2d363b;
+  --object-color-3: #10171d;
+
+  --header-color: #1b252c;
+  --header-text-color: #ffffff;
+
+  --accent-color: #3fa39e;
+  --accent-color-2: #3fa365;
+
+  --text-color: #ffffff;
+  --text-color-2: #8c9fac;
+
+  --background-color1: #090e11;
+  --background-color2: #161f25;
+
+  --shadow-size: 5px;
+}
+
+body {
+  min-height: 100vh;
+}
+
+body {
+  background-image: linear-gradient(0deg, var(--background-color1), var(--background-color2));
+  font-family: var(--font-sans);
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.6;
+  text-rendering: optimizespeed;
   margin: 0;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 a {
-  color: inherit;
+  color: var(--accent-color);
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+a.not-accentued {
+  color: var(--text-color);
+}
+
+a:hover {
+  color: var(--accent-color);
+}
+
+input[type="button"],
+button {
+  display: block;
+  background-color: var(--accent-color-2);
+  color: var(--text-color);
+  font-weight: 700;
+  border: none;
+}
+
+input[type="button"]:hover,
+button:hover {
+  cursor: pointer;
+  background-color: #2a814c;
+}
+
+input[type="button"]:active,
+button:active {
+  display: block;
+  background-color: #207541;
+  color: var(--text-color);
+  font-weight: 700;
+  border: none;
+}
+
+* {
+  color: var(--text-color-2)
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: var(--text-color);
+  font-weight: 700;
+}
+
+h1 {
+  font-size: 3rem;
+  letter-spacing: -.03em;
+  line-height: 1.4;
+  font-weight: 700;
+}
+
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
+
+pre {
+  background-color: var(--code-block-color) !important;
+}
+
+p,
+video {
+  margin-top: 0px;
+  margin-bottom: 18px;
+}
+
+h2,
+h3,
+h4,
+h6 {
+  margin-top: 18px;
+  margin-bottom: 8px;
+}
+
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+/* Code */
+code[class*=language-],pre[class*=language-]{color:#f8f8f2;background:0 0;text-shadow:0 1px rgba(0,0,0,.3);font-family:Consolas,Monaco,'Andale Mono','Ubuntu Mono',monospace;font-size:1em;text-align:left;white-space:pre;word-spacing:normal;word-break:normal;word-wrap:normal;line-height:1.5;-moz-tab-size:4;-o-tab-size:4;tab-size:4;-webkit-hyphens:none;-moz-hyphens:none;-ms-hyphens:none;hyphens:none}pre[class*=language-]{padding:1em;margin:.5em 0;overflow:auto;border-radius:.3em}:not(pre)>code[class*=language-],pre[class*=language-]{background:#272822}:not(pre)>code[class*=language-]{padding:.1em;border-radius:.3em;white-space:normal}.token.cdata,.token.comment,.token.doctype,.token.prolog{color:#8292a2}.token.punctuation{color:#f8f8f2}.token.namespace{opacity:.7}.token.constant,.token.deleted,.token.property,.token.symbol,.token.tag{color:#f92672}.token.boolean,.token.number{color:#ae81ff}.token.attr-name,.token.builtin,.token.char,.token.inserted,.token.selector,.token.string{color:#a6e22e}.language-css .token.string,.style .token.string,.token.entity,.token.operator,.token.url,.token.variable{color:#f8f8f2}.token.atrule,.token.attr-value,.token.class-name,.token.function{color:#e6db74}.token.keyword{color:#66d9ef}.token.important,.token.regex{color:#fd971f}.token.bold,.token.important{font-weight:700}.token.italic{font-style:italic}.token.entity{cursor:help}
+
+
+#content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+#main-list {
+  flex-grow: 1;
+  padding-top: 30px;
+}
+
+/* CLASSES */
+.site {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.shadow2 {
+  box-shadow: var(--shadow-size) var(--shadow-size) var(--shadow-size) #061216;
+}
+
+.round {
+  border-radius: 8px;
+}
+
+.clickable:hover {
+  cursor: pointer;
+}
+
+.button {
+  cursor: pointer
+}
+
+.outer {
+  padding-top: 0;
+  padding-left: var(--outer);
+  padding-right: var(--outer);
+}
+
+.inner {
+  margin: 0 auto;
+  max-width: var(--container-width, 1200px);
+}
+
+.post-background {
+  background-color: #10181d;
+}
+
+.bold {
+  font-weight: 700;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+
+.accentued {
+  color: var(--accent-color);
+}
+
+.accentued2 {
+  color: var(--accent-color-2);
+}
+
+
+.taxonomy-feed {
+  display: flex;
+  gap: 25px;
+  flex-direction: row;
+}
+
+
+.tags {
+  color: var(--accent-color);
+  font-size: 1.1rem;
+  font-weight: 700;
+  letter-spacing: .005em;
+  line-height: 1;
+  text-transform: uppercase;
+  display: flex;
+  gap: 0.6rem;
+}
+
+.page-feed {
+  display: flex;
+  gap: 25px;
+  flex-direction: column;
+}
+
+.powered-by {
+  text-align: right;
+}
+
+
+.normal-text {
+  color: var(--text-color-2);
+}
+
+@media (max-width : 1900px) {
+  .desktop-only {
+    display: flex !important;
   }
+
+  .phone-only {
+    display: none !important;
+  }
+}
+
+@media (max-width : 1000px) {
+  .desktop-only {
+    display: none !important;
+  }
+
+  .phone-only {
+    display: flex !important;
+  }
+}
+
+.article-meta {
+  display: flex;
+  gap: 1rem;
 }
