Fixed image display inside article_content

--- a/src/styles/Article.module.css
+++ b/src/styles/Article.module.css
@@ -10,12 +10,6 @@
     letter-spacing: var(--content-letter-spacing,0);
 }
 
-.article_image {
-    width : 100%;
-    height : auto;
-    margin-bottom: 10px;
-}
-
 .canvas {
     display: grid;
     grid-template-columns: [full-start] minmax(var(--gap),auto) [wide-start] minmax(auto,calc((var(--container-width, 1200px) - var(--content-width, 720px))/2)) [main-start] min(var(--content-width,720px),calc(100% - var(--gap)*2)) [main-end] minmax(auto,calc((var(--container-width, 1200px) - var(--content-width, 720px))/2)) [wide-end] minmax(var(--gap),auto) [full-end];
@@ -29,5 +23,10 @@
     padding-top: 94px;
     flex-grow: 1;
     padding-bottom: 30px;
-  }
+}
 
+.article_content > img {
+    width: 100%;
+    height : auto;
+    margin-bottom: 10px;
+}
