--- a/src/styles/Article.module.css
+++ b/src/styles/Article.module.css
@@ -30,3 +30,18 @@
     height : auto;
     margin-bottom: 10px;
 }
+
+.canvas > h1 {
+    margin-top : 20px;
+    margin-bottom : 20px;
+}
+
+.canvas > h2, .canvas > h3, .canvas > h4, .canvas > h5{
+  margin-top: 18px;
+  margin-bottom: 18px;
+}
+
+.canvas > p {
+    margin-top: 0px;
+    margin-bottom: 18px;
+}
