--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -113,6 +113,7 @@ h5,
 h6 {
   color: var(--text-color);
   font-weight: 700;
+  margin: 0;
 }
 
 h1 {
@@ -138,13 +139,7 @@ video {
   margin-bottom: 18px;
 }
 
-h2,
-h3,
-h4,
-h6 {
-  margin-top: 18px;
-  margin-bottom: 8px;
-}
+
 
 ul {
   margin-top: 0;
