--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,6 +22,8 @@
   --header-color: #ffffff;
   --header-text-color: black;
 
+  --menu-color: #0a0e11e0;
+
   --text-color: black;
   --text-color-2: black;
 
@@ -37,6 +39,8 @@
 
   --header-color: #1b252c;
   --header-text-color: #ffffff;
+
+  --menu-color: #0a0e118e;
 
   --accent-color: #3fa39e;
   --accent-color-2: #3fa365;
